welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:34: error: not found: value poseBrosse
poseBrosse()
^