welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {

def fonctionTest():Boolean = {
	if (estFaceMur) {
		if (getDirection() == Direction.EST) {
			gauche()
			if (!estFaceMur) {
				droite()
				return false				
			} else {
				droite()
				return true
			}			
		} else {
			if (getDirection() == Direction.OUEST) {
				droite()
				if (!estFaceMur) {
					gauche()
					return false
				} else {
					gauche()
					return true					
				}
			} else {
				return false
			}			
		}	
	} else {
		return false
	}
}


poseBrosse()
while (!fonctionTest) {	
		if (!estFaceMur) {
			avance()
		} else { 
			if (getDirection() == Direction.OUEST) {
				droite()
				avance()
				droite()
				
			} else {
				if(getDirection() == Direction.EST) {
					gauche()
					avance()
					gauche()
				}
			}
		}	
}	
}

